cycles deform motion blur + displacement behaves weirdly #47180

Closed
opened 2016-01-14 22:23:23 +01:00 by Ronny G · 7 comments

System Information
ubuntu 14.04 630gt

Blender Version
Broken: 2.76

Short description of error

its experimental i know but with displacement (normal or vector) motion blur (deform) seems to blurs everything that is deformed by displacement not only the deformation from the armature - its also A LOT slower :)

images

multires_mb.jpg

vector_displacement_mb.jpg

normal_displacement_mb.jpg

blend

https://www.dropbox.com/s/b4njvdl41buz010/disp_mb_bug.blend?dl=0

Exact steps for others to reproduce the error

just render the 3 models (layer 1 vector, layer 2 multires, layer 3 normal)

**System Information** ubuntu 14.04 630gt **Blender Version** Broken: 2.76 **Short description of error** its experimental i know but with displacement (normal or vector) motion blur (deform) seems to blurs everything that is deformed by displacement not only the deformation from the armature - its also A LOT slower :) images ![multires_mb.jpg](https://archive.blender.org/developer/F274487/multires_mb.jpg) ![vector_displacement_mb.jpg](https://archive.blender.org/developer/F274489/vector_displacement_mb.jpg) ![normal_displacement_mb.jpg](https://archive.blender.org/developer/F274491/normal_displacement_mb.jpg) blend https://www.dropbox.com/s/b4njvdl41buz010/disp_mb_bug.blend?dl=0 **Exact steps for others to reproduce the error** just render the 3 models (layer 1 vector, layer 2 multires, layer 3 normal)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @nudelZ

Added subscriber: @nudelZ
Sergey Sharybin was assigned by Bastien Montagne 2016-01-15 10:27:48 +01:00

Added subscriber: @mont29

Added subscriber: @mont29

My guess would be that it's due to displacement only affecting mesh at the time 0, and does not do displacement at other times. Will have a look into this.

My guess would be that it's due to displacement only affecting mesh at the time 0, and does not do displacement at other times. Will have a look into this.

This issue was referenced by 36aa7e659e

This issue was referenced by 36aa7e659e02bf5434af77749f587380a76e7512

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@70ae79baf9

This issue was referenced by blender/cycles@70ae79baf90344eddbd97ea54539452e7a2f9f25
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47180
No description provided.